--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>logo</h1>
         <nav>
             <ul>
-                <li><a href="">About</a> </li>
-                <li><a href="">Portfolio</a> </li>
+                <li><a href="#about">About</a> </li>
+                <li><a href="#portfolio">Portfolio</a> </li>
                 <li><a href="">Contact</a> </li>
 
             </ul>
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-info">
             <h2>About me</h2>
             <p>I am a web developer/designer as well as a game developer/designer and a freelance tech/game journalist.
@@ -46,6 +46,38 @@
             <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHBLg6k66MZRg/profile-displayphoto-shrink_800_800/0/1614022576420?e=1635984000&v=beta&t=GmwdJhSz9W2mtYBWGYvxL1gakEvRlfeHq0d41FBoE3w"
                 alt="">
         </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <h2>Projects</h2>
+        <div class="projects">
+            <a href="">
+                <div class="project">
+                    <h3>Coming soon</h3>
+                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                        alt="">
+                    <p>Coming soon</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="project">
+                    <h3>Coming soon</h3>
+                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                        alt="">
+                    <p>Coming soon</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="project">
+                    <h3>Coming soon</h3>
+                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                        alt="">
+                    <p>Coming soon</p>
+                </div>
+            </a>
+
+        </div>
+
     </section>
 
 </body>
