--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="">
                 <div class="project">
                     <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                    <img src="https://images.unsplash.com/photo-1583512603805-3cc6b41f3edb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
                         alt="">
                     <p>Coming soon</p>
                 </div>
@@ -77,7 +77,7 @@
             <a href="">
                 <div class="project">
                     <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                    <img src="https://images.unsplash.com/photo-1608831540955-35094d48694a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=753&q=80"
                         alt="">
                     <p>Coming soon</p>
                 </div>
@@ -85,7 +85,7 @@
             <a href="">
                 <div class="project">
                     <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/flagged/photo-1557650454-65194af63bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                    <img src="https://images.unsplash.com/photo-1537815749002-de6a533c64db?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=845&q=80"
                         alt="">
                     <p>Coming soon</p>
                 </div>
