--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 
 <body>
     <header>
-        <h1>logo</h1>
-        <nav>
-            <ul>
+        <h1 class="logo">logo</h1>
+        <nav class="nav">
+
+            <ul id="navList">
                 <li><a href="#about">About</a> </li>
                 <li><a href="#portfolio">Portfolio</a> </li>
                 <li><a href="#contact">Contact</a> </li>
-
             </ul>
+            <button class="hamburger" id="hamburger">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="40" height="40" viewBox="0 0 24 24">
+                    <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" />
+                </svg>
+            </button>
         </nav>
+
     </header>
     <section class="main">
         <div class="info">
@@ -100,6 +106,8 @@
         <h2 class="email">andrewsoguero@gmail.com</h2>
     </footer>
 
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
