--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
     <section class="portfolio" id="portfolio">
         <h2>Projects</h2>
         <div class="projects">
-            <a href="">
+            <a href="./Weather App/index.html">
                 <div class="project">
-                    <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/photo-1583512603805-3cc6b41f3edb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                        alt="">
-                    <p>Coming soon</p>
+                    <h3>Weather App</h3>
+                    <img src="./Images/Screenshot 2021-09-05 003604.png" alt="">
+                    <p>A weather app built using OpenWeatherMap API</p>
                 </div>
             </a>
             <a href="">
