Updated appearance on mobile

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <header>
         <h1 class="logo">logo</h1>
         <nav class="nav">
-
-            <ul id="navList">
-                <li><a href="#about">About</a> </li>
-                <li><a href="#portfolio">Portfolio</a> </li>
-                <li><a href="#contact">Contact</a> </li>
-            </ul>
             <button class="hamburger" id="hamburger">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="40" height="40" viewBox="0 0 24 24">
                     <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" />
                 </svg>
             </button>
+            <ul id="navList">
+                <li><a href="#about">About</a> </li>
+                <li><a href="#portfolio">Portfolio</a> </li>
+                <li><a href="#contact">Contact</a> </li>
+            </ul>
+
         </nav>
 
     </header>
@@ -75,16 +75,15 @@
             <a href="./Weather App/index.html">
                 <div class="project">
                     <h3>Weather App</h3>
-                    <img src="./Images/Screenshot 2021-09-05 003604.png" alt="">
+                    <img src="./Images/Screenshot 2021-09-05 003604.png" alt="Weather App">
                     <p>A weather app built using OpenWeatherMap API</p>
                 </div>
             </a>
-            <a href="">
+            <a href="./Pokedex/index.html">
                 <div class="project">
-                    <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/photo-1608831540955-35094d48694a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=753&q=80"
-                        alt="">
-                    <p>Coming soon</p>
+                    <h3>Pokedex</h3>
+                    <img src="./Images/pokedex.PNG" alt="Pokedex">
+                    <p>Search for Pokemon by name using PokeAPI.</p>
                 </div>
             </a>
             <a href="">
