--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@
                     <p>Search for Pokemon by name using PokeAPI.</p>
                 </div>
             </a>
-            <a href="">
+            <a href="https://www.colfaxguitars.com/">
                 <div class="project">
-                    <h3>Coming soon</h3>
-                    <img src="https://images.unsplash.com/photo-1537815749002-de6a533c64db?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=845&q=80"
-                        alt="">
-                    <p>Coming soon</p>
+                    <h3>Colfax Guitar Shop</h3>
+                    <img src="./Images/Colfax.PNG" alt="">
+                    <p>The business website for a guitar repair shop.</p>
                 </div>
             </a>
 
